--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,10 @@ body {
 .active hr {
   display: block;
 }
+
+@media (max-width: 640px) {
+  a.active {
+    background-color: black;
+    color: white;
+  }
+}
