Admin dashboard design, implement admin login, implement api in add product pageand list page

--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -1,3 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Prata&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: 'Outfit', sans-serif;
+}
+
+.prata-regular {
+  font-family: 'Prata', serif;
+}
+a.active {
+  background-color: black;
+  color: white;
+}
+
+/* .active hr {
+  display: block;
+}
+
+@media (max-width: 640px) {
+  a.active {
+    background-color: black;
+    color: white;
+  }
+} */
